--- a/e-assistant/package.json
+++ b/e-assistant/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "bootstrap": "^5.1.3",
+    "ng2-pdf-viewer": "^9.0.0",
+    "pspdfkit": "^2022.2.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
